    * 3830 netapp_api_luns: new check to monitor the filesystem usage of LUNs
    * 3949 ucd_cpu_load: Genugate devices are now displaying CPU load...
    * 3950 openbsd_sensors: Genugate devices are now handling hardware sensors...
    * 3749 storcli_pdisks, storcli_vdrives: New checks to monitor RAID status via StorCLI utility
    * 3988 Windows agent: no global option disabled_sections...
    * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
    * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
    * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
    * 3909 FIX: postfix_mailq: fixed readout postfix config
    * 3748 FIX: vertias_vcs: Fix empty agent section for standard xinetd configuration...
    * 3935 FIX: FIX avaya_45xx_cpu: check got UNKNOWN using Nagios core
    * 3896 FIX: Agent RPMs: Fixing dependency issue with old check_mk-agent-oracle-*.rpm and check_mk-agent-logwatch-*.rpm
    * 3936 FIX: chrony: support new params dictionary and rule "State of NTP time synchronisation"
    * 3649 FIX: Added a workaround for an escaping-related bug in old bash versions...
    * 3958 FIX: netapp_qtree_quota: fixed graph scaling
    * 3823 FIX: The windows agent were unable to execute powershell, python and pearl scripts
    * 3937 FIX: check_mk_agent.aix: fixed hadling of mailq command
    * 3824 FIX: netapp_api_snapvault: fixed duplicate service when item name contains a $ character...
    * 3825 FIX: local check: no longer cuts away any trailing "9" digits in P mode
    * 3964 FIX: df_zos: Fixed not working filesystemcheck for IBM z/OS...
    * 3826 FIX: netapp_api_connection: now removes duplicate warning messages
    * 3827 FIX: windows agent: fixed 3 bugs which broke the skype section
    * 3650 FIX: Fixed bash versionitis, unbreaking cached check results....
    * 3960 FIX: if.include: fixed wrong order if interface groups are configured