@@ -1367,6 +1367,7 @@ register_rule(group + '/' + subgroup_applications,
                                      ('W', _('WARNING')),
                                      ('O', _('OK')),
                                      ('I', _('IGNORE')),
+                                     ('.', _('Context Info')),
                                  ],
                                  default_value = "C",
                                )),
@@ -1377,6 +1378,7 @@ register_rule(group + '/' + subgroup_applications,
                                      ('W', _('WARNING')),
                                      ('O', _('OK')),
                                      ('I', _('IGNORE')),
+                                     ('.', _('Context Info')),
                                  ],
                                  default_value = "W",
                                )),
@@ -1387,8 +1389,20 @@ register_rule(group + '/' + subgroup_applications,
                                      ('W', _('WARNING')),
                                      ('O', _('OK')),
                                      ('I', _('IGNORE')),
+                                     ('.', _('Context Info')),
                                  ],
                                  default_value = "O",
+                               )),
+                               ("._to", DropdownChoice(
+                                 title = _("Change Context Info to"),
+                                 choices = [
+                                     ('C', _('CRITICAL')),
+                                     ('W', _('WARNING')),
+                                     ('O', _('OK')),
+                                     ('I', _('IGNORE')),
+                                     ('.', _('Context Info')),
+                                 ],
+                                 default_value = ".",
                                )),
                             ],
                             optional_keys = False
