@@ -19,7 +19,8 @@
     * 3949 ucd_cpu_load: Genugate devices are now displaying CPU load...
     * 3950 openbsd_sensors: Genugate devices are now handling hardware sensors...
     * 3749 storcli_pdisks, storcli_vdrives: New checks to monitor RAID status via StorCLI utility
-    * 3988 Windows agent: no global option disabled_sections...
+    * 3988 Windows agent: new global option disabled_sections...
+    * 3989 Logwatch patterns: now able to change state of context lines...
     * 3894 FIX: mkeventd_status: Fixed bug in case Event Console is not running
     * 3907 FIX: oracle_tablespaces: simplyfied free space calculation depending on version...
     * 3819 FIX: windows agent: fixed 2 bugs related to mrpe...
